assets/css/style.css
/* ... */
@media screen and (max-width: 576px) {
  .blog-item,
  .git,
  .brand,
  .project-item {
    flex: 0 0 100%;
    max-width: 100%;
  }
  .blog-item .inner,
  .project-item-inner {
    max-width: 380px;
    margin: 0 auto;
  }
  .timeline {
    padding: 25px 20px;
  }
  .timeline .timeline-item {
    padding-left: 35px;
    padding-bottom: 20px;
  }
  .customize-theme .card {
    width: 96vw;
    padding: 1rem;
  }
}

@media screen and (max-width: 320px) {
  .fact-item,
  .brand {
    flex: 0 0 100%;
    max-width: 100%;
  }
}

.resume-button:not(:first-child) {
  padding-left: 10px;
}

.git {
  flex: 0 0 100%;
  max-width: 100%;
}

.git-img {
  width: 100%;
  height: auto;
  object-fit: cover;
}

.brand{
  flex: 0 0 100%;
  max-width: 100%;
  overflow: hidden;
}


.brand-track {
  display: flex;       /* makes items inline in a row */
  width: max-content;  /* track width only as wide as images */
  animation: scroll 30s linear infinite;
}

.brand-track img,
.brand-track svg {
  height: 48px;       /* fixed height */
  width: auto;        /* scale proportionally */
  margin: 0 10px;
vertical-align: middle;
  object-fit: contain;
  opacity: 0.8;
  transition: 0.3s;
}

.brand-track img:hover,
.brand-track svg:hover {
  filter: grayscale(0);
  opacity: 1;
}

@keyframes scroll {
  0% { transform: translateX(0); }
  100% { transform: translateX(-50%); } /* for duplicated images */
}


.brand .brand-track:hover{
  animation-play-state: paused;
}


/* toggle night,day button */
.switch {
  position: relative;
  display: inline-block;
  width: 50px;
  height: 26px;
}

.switch input {
  display: none;
}

.slider {
  position: absolute;
  cursor: pointer;
  inset: 0;
  background: #ccc;
  border-radius: 26px;
  transition: 0.3s;
  
}

.slider::before {
  content: "";
  position: absolute;
  height: 20px;
  width: 20px;
  left: 3px;
  bottom: 3px;
  background: white;
  border-radius: 50%;
  transition: 0.3s;
}

input:checked + .slider {
  background: #4caf50;
}

input:checked + .slider::before {
  transform: translateX(24px);
}

